[package]
name = "tcpm"
version = "0.1.0"
authors = ["yuuzao <w@tcp.cat>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
etherparse= "0.9.0"
bitflags = "1.0"
log = "0.4.14"
simplelog = "0.11.0"
nix = "0.23.0"

[[bin]]
name = "tcpm"

[lib]
name = "tcpm"